gen/iam/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-iam1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/iam/v1/lib)
error[E0433]: failed to resolve: unresolved import
    --> gen/iam/v1/lib/src/lib.rs:7526:48
     |
7526 |                 public_key_type: Option<crate::keys::params::GetPublicKeyType>,
     |                                                ^^^^
     |                                                |
     |                                                unresolved import
     |                                                help: a similar path exists: `crate::projects::service_accounts::keys`

error[E0433]: failed to resolve: unresolved import
    --> gen/iam/v1/lib/src/lib.rs:7543:35
     |
7543 |                     value: crate::keys::params::GetPublicKeyType,
     |                                   ^^^^
     |                                   |
     |                                   unresolved import
     |                                   help: a similar path exists: `crate::projects::service_accounts::keys`

error[E0433]: failed to resolve: unresolved import
    --> gen/iam/v1/lib/src/lib.rs:7664:42
     |
7664 |                 key_types: Option<crate::keys::params::ListKeyTypes>,
     |                                          ^^^^
     |                                          |
     |                                          unresolved import
     |                                          help: a similar path exists: `crate::projects::service_accounts::keys`

error[E0433]: failed to resolve: unresolved import
    --> gen/iam/v1/lib/src/lib.rs:7679:59
     |
7679 |                 pub fn key_types(&mut self, value: crate::keys::params::ListKeyTypes) -> &mut Self {
     |                                                           ^^^^
     |                                                           |
     |                                                           unresolved import
     |                                                           help: a similar path exists: `crate::projects::service_accounts::keys`

error[E0423]: expected value, found struct `roles::RolesActions`
    --> gen/iam/v1/lib/src/lib.rs:2499:13
     |
2499 |             roles::RolesActions
     |             ^^^^^^^^^^^^^^^^^^^ did you mean `roles::RolesActions { /* fields */ }`?

error[E0423]: expected value, found struct `roles::RolesActions`
    --> gen/iam/v1/lib/src/lib.rs:3751:13
     |
3751 |             roles::RolesActions
     |             ^^^^^^^^^^^^^^^^^^^ did you mean `roles::RolesActions { /* fields */ }`?

error[E0423]: expected value, found struct `service_accounts::ServiceAccountsActions`
    --> gen/iam/v1/lib/src/lib.rs:3755:13
     |
3755 |             service_accounts::ServiceAccountsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `service_accounts::ServiceAccountsActions { /* fields */ }`?

error[E0423]: expected value, found struct `keys::KeysActions`
    --> gen/iam/v1/lib/src/lib.rs:5168:17
     |
5168 |                 keys::KeysActions
     |                 ^^^^^^^^^^^^^^^^^ did you mean `keys::KeysActions { /* fields */ }`?

warning: unreachable expression
    --> gen/iam/v1/lib/src/lib.rs:2530:21
     |
2530 | /                     Ok(match value {
2531 | |                         _ => {
2532 | |                             return Err(::serde::de::Error::custom(format!(
2533 | |                                 "invalid enum for #name: {}",
...    |
2536 | |                         }
2537 | |                     })
     | |______________________^
     |
     = note: #[warn(unreachable_code)] on by default

warning: unreachable expression
    --> gen/iam/v1/lib/src/lib.rs:3786:21
     |
3786 | /                     Ok(match value {
3787 | |                         _ => {
3788 | |                             return Err(::serde::de::Error::custom(format!(
3789 | |                                 "invalid enum for #name: {}",
...    |
3792 | |                         }
3793 | |                     })
     | |______________________^

warning: unreachable expression
    --> gen/iam/v1/lib/src/lib.rs:7126:25
     |
7126 | /                         Ok(match value {
7127 | |                             _ => {
7128 | |                                 return Err(::serde::de::Error::custom(format!(
7129 | |                                     "invalid enum for #name: {}",
...    |
7132 | |                             }
7133 | |                         })
     | |__________________________^

warning: unreachable expression
    --> gen/iam/v1/lib/src/lib.rs:7162:25
     |
7162 | /                         Ok(match value {
7163 | |                             _ => {
7164 | |                                 return Err(::serde::de::Error::custom(format!(
7165 | |                                     "invalid enum for #name: {}",
...    |
7168 | |                             }
7169 | |                         })
     | |__________________________^

warning: unreachable expression
    --> gen/iam/v1/lib/src/lib.rs:7828:17
     |
7828 | /                 Ok(match value {
7829 | |                     _ => {
7830 | |                         return Err(::serde::de::Error::custom(format!(
7831 | |                             "invalid enum for #name: {}",
...    |
7834 | |                     }
7835 | |                 })
     | |__________________^

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0423, E0433.
For more information about an error, try `rustc --explain E0423`.
error: Could not compile `google-iam1`.

To learn more, run the command again with --verbose.
